[package]
name = "libnetxduo-sys"
version = "0.1.0"
edition = "2024"
links = "netxduo"
license = "MIT"
publish = false

[dependencies.libthreadx-sys]
git = "https://github.com/mciantyre/libthreadx-sys"

[dependencies.libfilex-sys]
git = "https://github.com/mciantyre/libfilex-sys"
optional = true

[build-dependencies]
cc = { version = "1.1.6" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    # Enable interface capabilities.
    'cfg(nx_enable_interface_capability)',
    # Deferred driver processing on the IP thread.
    'cfg(nx_driver_deferred_processing)',

    # Install your own packet pool into DHCP clients.
    'cfg(nx_dhcp_client_user_create_packet_pool)',
] }

[features]
dhcp-client = []
web = ["filex"]

filex = ["dep:libfilex-sys"]
